exploring missing values

--- a/02_ETL/02.07 - Pre-processing BMI.ipynb
+++ b/02_ETL/02.07 - Pre-processing BMI.ipynb
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
        "[5230 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1856,7 @@
        "[52793 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -2045,7 +2045,7 @@
        "[52793 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2154,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2321,7 @@
        "[24039 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2353,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2520,7 @@
        "[19979 rows x 6 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2557,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -2712,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2891,6 +2891,74 @@
     "    df_aux = df_fill_nan_using_interpolation.copy()\n",
     "    \n",
     "    print()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Qty_Measurements_BMI for each patient and save into\n",
+    "## the `patient.csv` file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5230 samples were saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "qty_col = 'Qty_Measurements_BMI'\n",
+    "\n",
+    "#drop column if exists\n",
+    "try:\n",
+    "    df.drop(columns=[qty_col], inplace=True)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "#set the name of CSV file\n",
+    "data_file = f'{data_dir}/_BMI.csv'\n",
+    "\n",
+    "#read data and show some info\n",
+    "df_grouped = pd.read_csv(data_file, delimiter=',')\n",
+    "# df_grouped.head()\n",
+    "\n",
+    "col_to_count = 'BMI'\n",
+    "\n",
+    "df_grouped = pd.DataFrame(df_grouped.groupby(by='subject_id')[col_to_count].count() )\n",
+    "df_grouped.rename(columns={col_to_count: qty_col}, inplace=True)\n",
+    "df_grouped.reset_index(inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#set the data directory\n",
+    "data_dir = os.path.abspath('../03_preprocessed_data/')\n",
+    "\n",
+    "#set the name of CSV file\n",
+    "data_file = f'{data_dir}/_patient.csv'\n",
+    "\n",
+    "#read data and show some info\n",
+    "df = pd.read_csv(data_file, delimiter=',')\n",
+    "\n",
+    "\n",
+    "df_join = utils.join_datasets_by_key(df_main=df, df_to_join=df_grouped, key_name='subject_id', how='left')\n",
+    "\n",
+    "# fill NaN valus with 0\n",
+    "df_join[qty_col].fillna(0, inplace=True)\n",
+    "\n",
+    "\n",
+    "# save patient data\n",
+    "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
+    "csv_dest = f'{dir_dest}/_patient.csv'\n",
+    "utils.save_to_csv(df=df_join, csv_file=csv_dest)\n",
     "\n"
    ]
   },
