--- a/02_ETL/02.00.01 - Preprocess raw data.ipynb
+++ b/02_ETL/02.00.01 - Preprocess raw data.ipynb
@@ -2362,6 +2362,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "# 12. Preprocessing temporal ALSFRS data and save it\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38656 samples were saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_alsfrs = utils_preprocessing.preprocess_alsfrs(df_to_process=df, data_dir=data_dir)\n",
+    "\n",
+    "# save LAFRS CSV file\n",
+    "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
+    "csv_dest = f'{dir_dest}/ALSFRS.csv'\n",
+    "utils.save_to_csv(df=df_alsfrs, csv_file=csv_dest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "---\n",
     "---\n",
@@ -2399,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2408,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {
     "scrolled": true
    },
@@ -2427,7 +2458,8 @@
       "Age_at_Onset.............. =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     5 \n",
       "Event_Dead................ =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     2 \n",
       "Event_Dead_Time_from_Onset =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=   111 \n",
-      "Riluzole.................. =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     2 \n"
+      "Riluzole.................. =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     2 \n",
+      "El_Escorial............... =  3380 rows (64.12%)  1891 with NaN (35.88%) Uniques=     5 \n"
      ]
     }
    ],
@@ -2446,25 +2478,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "subject_id................ =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=  5271 \n",
-      "Age....................... =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=   189 \n",
-      "Sex....................... =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     2 \n",
-      "Symptoms_Onset_Delta...... =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=  1319 \n",
-      "Diagnosis_Delta........... =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=   962 \n",
-      "Site_Onset................ =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     4 \n",
-      "Diagnosis_Delay........... =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     3 \n",
-      "Age_at_Onset.............. =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     5 \n",
-      "Event_Dead................ =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     2 \n",
-      "Event_Dead_Time_from_Onset =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=   111 \n",
-      "Riluzole.................. =  5271 rows (100.0%)     0 with NaN (  0.0%) Uniques=     2 \n",
-      "El_Escorial............... =  3380 rows (64.12%)  1891 with NaN (35.88%) Uniques=     5 \n"
+      "subject_id....................... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=  4903 \n",
+      "Q1_Speech........................ = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q2_Salivation.................... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q3_Swallowing.................... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q4_Handwriting................... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q5_Cutting....................... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q6_Dressing_and_Hygiene.......... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q7_Turning_in_Bed................ = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q8_Walking....................... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q9_Climbing_Stairs............... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     9 \n",
+      "Q10_Respiratory.................. = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     7 \n",
+      "ALSFRS_Delta..................... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=  1109 \n",
+      "Patient_with_Gastrostomy......... = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=     2 \n",
+      "Delta_from_Symptoms_Onset_in_Days = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=  2426 \n",
+      "Delta_from_Symptoms_Onset........ = 43454 rows (100.0%)     0 with NaN (  0.0%) Uniques=   167 \n"
      ]
     }
    ],
