--- a/02_ETL/02.00.01 - Preprocess raw data.ipynb
+++ b/02_ETL/02.00.01 - Preprocess raw data.ipynb
@@ -2369,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2387,6 +2387,70 @@
     "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
     "csv_dest = f'{dir_dest}/ALSFRS.csv'\n",
     "utils.save_to_csv(df=df_alsfrs, csv_file=csv_dest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# 13. Preprocessing temporal FVC data and save it\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19329 samples were saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_fvc = utils_preprocessing.preprocess_fvc(df_to_process=df, data_dir=data_dir)\n",
+    "\n",
+    "# save LAFRS CSV file\n",
+    "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
+    "csv_dest = f'{dir_dest}/FVC.csv'\n",
+    "utils.save_to_csv(df=df_fvc, csv_file=csv_dest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# 14. Preprocessing temporal SVC data and save it\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7983 samples were saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_svc = utils_preprocessing.preprocess_svc(df_to_process=df, data_dir=data_dir)\n",
+    "\n",
+    "df_svc\n",
+    "\n",
+    "# save LAFRS CSV file\n",
+    "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
+    "csv_dest = f'{dir_dest}/SVC.csv'\n",
+    "utils.save_to_csv(df=df_svc, csv_file=csv_dest)"
    ]
   },
   {
