--- a/02_ETL/02.01 - Preprocess raw data.ipynb
+++ b/02_ETL/02.01 - Preprocess raw data.ipynb
@@ -2383,7 +2383,7 @@
    "source": [
     "df_alsfrs = utils_preprocessing.preprocess_alsfrs(df_to_process=df, data_dir=data_dir)\n",
     "\n",
-    "# save LAFRS CSV file\n",
+    "# save ALSFRS CSV file\n",
     "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
     "csv_dest = f'{dir_dest}/ALSFRS.csv'\n",
     "utils.save_to_csv(df=df_alsfrs, csv_file=csv_dest)"
@@ -2414,7 +2414,7 @@
    "source": [
     "df_fvc = utils_preprocessing.preprocess_fvc(df_to_process=df, data_dir=data_dir)\n",
     "\n",
-    "# save LAFRS CSV file\n",
+    "# save FVC CSV file\n",
     "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
     "csv_dest = f'{dir_dest}/FVC.csv'\n",
     "utils.save_to_csv(df=df_fvc, csv_file=csv_dest)"
@@ -2447,10 +2447,52 @@
     "\n",
     "df_svc\n",
     "\n",
-    "# save LAFRS CSV file\n",
+    "# save LAFRS SVC file\n",
     "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
     "csv_dest = f'{dir_dest}/SVC.csv'\n",
     "utils.save_to_csv(df=df_svc, csv_file=csv_dest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# 15. Preprocessing temporal BMI data and save it\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "175 samples will be deleted due to Height < 0.80\n",
+      "165 samples will be deleted due to Weigth < 25 kg\n",
+      "5271 samples were saved\n",
+      "19992 samples were saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_patient, df_bmi = utils_preprocessing.preprocess_bmi(df_to_process=df, data_dir=data_dir)\n",
+    "\n",
+    "df_bmi\n",
+    "\n",
+    "    \n",
+    "# save PATIENT CSV file\n",
+    "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
+    "csv_dest = f'{dir_dest}/patient.csv'\n",
+    "utils.save_to_csv(df=df_patient, csv_file=csv_dest)\n",
+    "\n",
+    "# save BMI CSV file\n",
+    "dir_dest = os.path.abspath('../03_preprocessed_data/')\n",
+    "csv_dest = f'{dir_dest}/BMI.csv'\n",
+    "utils.save_to_csv(df=df_bmi, csv_file=csv_dest)"
    ]
   },
   {
@@ -2494,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2503,7 +2545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 126,
    "metadata": {
     "scrolled": true
    },
@@ -2598,6 +2640,24 @@
     "csv_dest = f'{dir_dest}/patient.csv'\n",
     "utils.save_to_csv(df=df, csv_file=csv_dest)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_data = os.path.abspath('../03_preprocessed_data/')\n",
+    "csv_patient = f'{dir_data}/patient.csv'\n",
+    "df = utils.read_csv(csv_file=csv_patient)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
