--- a/05_Train_Validate_Models/05.20.1 - Ensemble-Imbalance Scenario - Train Models using Grid Search.ipynb
+++ b/05_Train_Validate_Models/05.20.1 - Ensemble-Imbalance Scenario - Train Models using Grid Search.ipynb
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -783,7 +783,296 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(85/112) Executing SVC... Fitting 5 folds for each of 42 candidates, totalling 210 fits\n"
+      "(112/112) Executing SVC... Fitting 5 folds for each of 42 candidates, totalling 210 fits\n",
+      "  -  Previous=24613, To delete=0, After=24613\n",
+      "saving and waiting...\n",
+      "24613 samples were saved\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>Features</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>BalAcc</th>\n",
+       "      <th>Sens</th>\n",
+       "      <th>Spec</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>AUC</th>\n",
+       "      <th>Acc</th>\n",
+       "      <th>Prec</th>\n",
+       "      <th>Classifier</th>\n",
+       "      <th>Hyperparams</th>\n",
+       "      <th>Estimator_Desc</th>\n",
+       "      <th>Estimator_Class</th>\n",
+       "      <th>Estimator_Hyperparams</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 51, 'random_state': 42, 'samp...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.1, 'batch_si...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 51, 'random_state': 42, 'samp...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.1, 'batch_si...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 75, 'random_state': 42, 'samp...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.1, 'batch_si...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 75, 'random_state': 42, 'samp...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.1, 'batch_si...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 101, 'random_state': 42, 'sam...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.0001, 'batch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 101, 'random_state': 42, 'sam...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.0001, 'batch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 101, 'random_state': 42, 'sam...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.0001, 'batch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 101, 'random_state': 42, 'sam...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.0001, 'batch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 101, 'random_state': 42, 'sam...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.0001, 'batch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Ensemble-Imbalance</td>\n",
+       "      <td>All Features</td>\n",
+       "      <td>Balanced Bagging</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>BalancedBaggingClassifier</td>\n",
+       "      <td>{'n_estimators': 101, 'random_state': 42, 'sam...</td>\n",
+       "      <td>Neural Networks</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>{'activation': 'relu', 'alpha': 0.0001, 'batch...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Dataset      Features             Model  BalAcc  Sens  Spec  \\\n",
+       "0  Ensemble-Imbalance  All Features  Balanced Bagging    0.84  0.85  0.83   \n",
+       "1  Ensemble-Imbalance  All Features  Balanced Bagging    0.84  0.85  0.83   \n",
+       "2  Ensemble-Imbalance  All Features  Balanced Bagging    0.84  0.84  0.84   \n",
+       "3  Ensemble-Imbalance  All Features  Balanced Bagging    0.84  0.84  0.84   \n",
+       "4  Ensemble-Imbalance  All Features  Balanced Bagging    0.83  0.85  0.81   \n",
+       "5  Ensemble-Imbalance  All Features  Balanced Bagging    0.83  0.85  0.81   \n",
+       "6  Ensemble-Imbalance  All Features  Balanced Bagging    0.83  0.85  0.81   \n",
+       "7  Ensemble-Imbalance  All Features  Balanced Bagging    0.83  0.85  0.81   \n",
+       "8  Ensemble-Imbalance  All Features  Balanced Bagging    0.83  0.85  0.81   \n",
+       "9  Ensemble-Imbalance  All Features  Balanced Bagging    0.83  0.85  0.81   \n",
+       "\n",
+       "     f1   AUC   Acc  Prec                 Classifier  \\\n",
+       "0  0.57  0.91  0.83  0.43  BalancedBaggingClassifier   \n",
+       "1  0.57  0.91  0.83  0.43  BalancedBaggingClassifier   \n",
+       "2  0.58  0.91  0.84  0.45  BalancedBaggingClassifier   \n",
+       "3  0.58  0.91  0.84  0.45  BalancedBaggingClassifier   \n",
+       "4  0.54  0.91  0.81  0.40  BalancedBaggingClassifier   \n",
+       "5  0.54  0.91  0.81  0.40  BalancedBaggingClassifier   \n",
+       "6  0.54  0.91  0.81  0.40  BalancedBaggingClassifier   \n",
+       "7  0.54  0.91  0.81  0.40  BalancedBaggingClassifier   \n",
+       "8  0.54  0.91  0.81  0.40  BalancedBaggingClassifier   \n",
+       "9  0.54  0.91  0.81  0.40  BalancedBaggingClassifier   \n",
+       "\n",
+       "                                         Hyperparams   Estimator_Desc  \\\n",
+       "0  {'n_estimators': 51, 'random_state': 42, 'samp...  Neural Networks   \n",
+       "1  {'n_estimators': 51, 'random_state': 42, 'samp...  Neural Networks   \n",
+       "2  {'n_estimators': 75, 'random_state': 42, 'samp...  Neural Networks   \n",
+       "3  {'n_estimators': 75, 'random_state': 42, 'samp...  Neural Networks   \n",
+       "4  {'n_estimators': 101, 'random_state': 42, 'sam...  Neural Networks   \n",
+       "5  {'n_estimators': 101, 'random_state': 42, 'sam...  Neural Networks   \n",
+       "6  {'n_estimators': 101, 'random_state': 42, 'sam...  Neural Networks   \n",
+       "7  {'n_estimators': 101, 'random_state': 42, 'sam...  Neural Networks   \n",
+       "8  {'n_estimators': 101, 'random_state': 42, 'sam...  Neural Networks   \n",
+       "9  {'n_estimators': 101, 'random_state': 42, 'sam...  Neural Networks   \n",
+       "\n",
+       "  Estimator_Class                              Estimator_Hyperparams  \n",
+       "0   MLPClassifier  {'activation': 'relu', 'alpha': 0.1, 'batch_si...  \n",
+       "1   MLPClassifier  {'activation': 'relu', 'alpha': 0.1, 'batch_si...  \n",
+       "2   MLPClassifier  {'activation': 'relu', 'alpha': 0.1, 'batch_si...  \n",
+       "3   MLPClassifier  {'activation': 'relu', 'alpha': 0.1, 'batch_si...  \n",
+       "4   MLPClassifier  {'activation': 'relu', 'alpha': 0.0001, 'batch...  \n",
+       "5   MLPClassifier  {'activation': 'relu', 'alpha': 0.0001, 'batch...  \n",
+       "6   MLPClassifier  {'activation': 'relu', 'alpha': 0.0001, 'batch...  \n",
+       "7   MLPClassifier  {'activation': 'relu', 'alpha': 0.0001, 'batch...  \n",
+       "8   MLPClassifier  {'activation': 'relu', 'alpha': 0.0001, 'batch...  \n",
+       "9   MLPClassifier  {'activation': 'relu', 'alpha': 0.0001, 'batch...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "FINISHED !!!\n",
+      "CPU times: user 1h 40min 47s, sys: 2.66 s, total: 1h 40min 50s\n",
+      "Wall time: 22h 24min 38s\n"
      ]
     }
    ],
