--- a/05_Train_Validate_Models/05.20.1 - Ensemble-Imbalance Scenario - Train Models using Grid Search.ipynb
+++ b/05_Train_Validate_Models/05.20.1 - Ensemble-Imbalance Scenario - Train Models using Grid Search.ipynb
@@ -531,7 +531,7 @@
     "    #\n",
     "# OK    'MLPClassifier', \n",
     "    #\n",
-    "#     'DecisionTreeClassifier', \n",
+    "# OK    'DecisionTreeClassifier', \n",
     "    #\n",
     "# OK    'RadiusNeighborsClassifier', \n",
     "# OK    'KNeighborsClassifier',\n",
