exec_results_Single_Model_without_Diagnosis_Delay

--- a/05_Train_Validate_Models/05.10.1 - Single-Model Scenario - Train Models using Grid Search.ipynb
+++ b/05_Train_Validate_Models/05.10.1 - Single-Model Scenario - Train Models using Grid Search.ipynb
@@ -607,6 +607,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 571,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_copy = df_performances.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 544,
    "metadata": {},
    "outputs": [],
@@ -616,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 575,
    "metadata": {
     "scrolled": false
    },
@@ -625,22 +634,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n",
+      "Reading results saved previously...\n",
+      "Fitting 5 folds for each of 2592 candidates, totalling 12960 fits\n",
       "5 samples were saved\n",
-      "Fitting 5 folds for each of 4 candidates, totalling 20 fits\n",
-      "4 samples were saved\n",
-      "Fitting 5 folds for each of 4 candidates, totalling 20 fits\n",
-      "4 samples were saved\n",
-      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n",
-      "5 samples were saved\n",
-      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
-      "1 samples were saved\n",
-      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n",
-      "2 samples were saved\n",
-      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
-      "1 samples were saved\n",
-      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
-      "1 samples were saved\n",
       "\n",
       "FINISHED !!!\n"
      ]
@@ -691,53 +687,53 @@
        "      <td>0.80</td>\n",
        "      <td>0.37</td>\n",
        "      <td>SVC</td>\n",
-       "      <td>{'C': 0.1, 'class_weight': 'balanced', 'gamma': 'scale', 'kernel': 'linear', 'probability': True, 'random_state': 42}</td>\n",
-       "      <td>0.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Decision Tree</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>{'class_weight': 'balanced', 'criterion': 'entropy', 'max_depth': 7, 'random_state': 42}</td>\n",
+       "      <td>{'C': 0.1, 'class_weight': 'balanced', 'gamma': 'auto', 'kernel': 'linear', 'probability': True, 'random_state': 42}</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.74</td>\n",
+       "      <td>0.81</td>\n",
        "      <td>0.83</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.38</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.35</td>\n",
        "      <td>RandomForestClassifier</td>\n",
-       "      <td>{'class_weight': 'balanced', 'criterion': 'gini', 'max_depth': 5, 'n_estimators': 5, 'random_state': 42}</td>\n",
+       "      <td>{'class_weight': 'balanced_subsample', 'criterion': 'entropy', 'max_depth': 5, 'n_estimators': 11, 'random_state': 42}</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
        "      <td>Naïve Bayes</td>\n",
-       "      <td>0.78</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>ComplementNB</td>\n",
+       "      <td>{'alpha': 7.0, 'force_alpha': False, 'norm': False}</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.42</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.73</td>\n",
-       "      <td>0.44</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>ComplementNB</td>\n",
-       "      <td>{'alpha': 0.5, 'norm': False}</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>DecisionTreeClassifier</td>\n",
+       "      <td>{'class_weight': 'balanced', 'criterion': 'gini', 'max_depth': 4, 'random_state': 42}</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>4</th>\n",
        "      <td>Naïve Bayes</td>\n",
        "      <td>0.77</td>\n",
        "      <td>0.70</td>\n",
@@ -753,43 +749,43 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Neural Networks</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>0.87</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.51</td>\n",
        "      <td>0.89</td>\n",
-       "      <td>0.52</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.49</td>\n",
        "      <td>MLPClassifier</td>\n",
-       "      <td>{'activation': 'relu', 'alpha': 0.3, 'hidden_layer_sizes': (30, 30), 'learning_rate': 'constant', 'learning_rate_init': 0.1, 'max_iter': 2000, 'random_state': 42, 'solver': 'sgd'}</td>\n",
+       "      <td>{'activation': 'tanh', 'alpha': 0.1, 'hidden_layer_sizes': (22,), 'learning_rate': 'adaptive', 'learning_rate_init': 0.5, 'max_iter': 2000, 'random_state': 42, 'solver': 'adam'}</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>5</th>\n",
        "      <td>k-NN</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.24</td>\n",
        "      <td>RadiusNeighborsClassifier</td>\n",
-       "      <td>{'leaf_size': 50, 'metric': 'manhattan', 'outlier_label': 1, 'radius': 0.3, 'weights': 'distance'}</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>{'leaf_size': 200, 'metric': 'euclidean', 'outlier_label': 1, 'radius': 0.7, 'weights': 'uniform'}</td>\n",
+       "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>6</th>\n",
        "      <td>k-NN</td>\n",
-       "      <td>0.63</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.97</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.96</td>\n",
        "      <td>0.39</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>0.56</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.50</td>\n",
        "      <td>KNeighborsClassifier</td>\n",
-       "      <td>{'metric': 'manhattan', 'n_neighbors': 5, 'weights': 'distance'}</td>\n",
+       "      <td>{'metric': 'manhattan', 'n_neighbors': 3, 'weights': 'distance'}</td>\n",
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -799,43 +795,43 @@
       "text/plain": [
        "             Model  balanced_accuracy  sensitivity  specificity  f1_score  \\\n",
        "0              SVM               0.84         0.89         0.79      0.52   \n",
-       "2    Decision Tree               0.79         0.79         0.80      0.48   \n",
-       "1    Random Forest               0.79         0.74         0.83      0.50   \n",
-       "0      Naïve Bayes               0.78         0.83         0.73      0.44   \n",
-       "0      Naïve Bayes               0.77         0.70         0.84      0.49   \n",
-       "0  Neural Networks               0.70         0.45         0.95      0.48   \n",
-       "0             k-NN               0.64         0.94         0.35      0.28   \n",
-       "0             k-NN               0.63         0.30         0.97      0.39   \n",
+       "1    Random Forest               0.81         0.83         0.79      0.49   \n",
+       "2      Naïve Bayes               0.79         0.83         0.75      0.45   \n",
+       "3    Decision Tree               0.77         0.83         0.71      0.42   \n",
+       "4      Naïve Bayes               0.77         0.70         0.84      0.49   \n",
+       "0  Neural Networks               0.73         0.53         0.93      0.51   \n",
+       "5             k-NN               0.71         0.72         0.69      0.36   \n",
+       "6             k-NN               0.64         0.32         0.96      0.39   \n",
        "\n",
        "    AUC  accuracy  precision                Model_Class  \\\n",
        "0  0.89      0.80       0.37                        SVC   \n",
-       "2  0.83      0.79       0.34     DecisionTreeClassifier   \n",
-       "1  0.87      0.82       0.38     RandomForestClassifier   \n",
-       "0  0.86      0.75       0.30               ComplementNB   \n",
-       "0  0.88      0.82       0.37                 GaussianNB   \n",
-       "0  0.87      0.89       0.52              MLPClassifier   \n",
-       "0  0.65      0.42       0.16  RadiusNeighborsClassifier   \n",
-       "0  0.79      0.89       0.56       KNeighborsClassifier   \n",
+       "1  0.88      0.80       0.35     RandomForestClassifier   \n",
+       "2  0.86      0.76       0.31               ComplementNB   \n",
+       "3  0.83      0.73       0.28     DecisionTreeClassifier   \n",
+       "4  0.88      0.82       0.37                 GaussianNB   \n",
+       "0  0.89      0.88       0.49              MLPClassifier   \n",
+       "5  0.71      0.70       0.24  RadiusNeighborsClassifier   \n",
+       "6  0.76      0.88       0.50       KNeighborsClassifier   \n",
        "\n",
-       "                                                                                                                                                                           Hyperparams  \\\n",
-       "0                                                                {'C': 0.1, 'class_weight': 'balanced', 'gamma': 'scale', 'kernel': 'linear', 'probability': True, 'random_state': 42}   \n",
-       "2                                                                                             {'class_weight': 'balanced', 'criterion': 'entropy', 'max_depth': 7, 'random_state': 42}   \n",
-       "1                                                                             {'class_weight': 'balanced', 'criterion': 'gini', 'max_depth': 5, 'n_estimators': 5, 'random_state': 42}   \n",
-       "0                                                                                                                                                        {'alpha': 0.5, 'norm': False}   \n",
-       "0                                                                                                                                                                                   {}   \n",
-       "0  {'activation': 'relu', 'alpha': 0.3, 'hidden_layer_sizes': (30, 30), 'learning_rate': 'constant', 'learning_rate_init': 0.1, 'max_iter': 2000, 'random_state': 42, 'solver': 'sgd'}   \n",
-       "0                                                                                   {'leaf_size': 50, 'metric': 'manhattan', 'outlier_label': 1, 'radius': 0.3, 'weights': 'distance'}   \n",
-       "0                                                                                                                     {'metric': 'manhattan', 'n_neighbors': 5, 'weights': 'distance'}   \n",
+       "                                                                                                                                                                         Hyperparams  \\\n",
+       "0                                                               {'C': 0.1, 'class_weight': 'balanced', 'gamma': 'auto', 'kernel': 'linear', 'probability': True, 'random_state': 42}   \n",
+       "1                                                             {'class_weight': 'balanced_subsample', 'criterion': 'entropy', 'max_depth': 5, 'n_estimators': 11, 'random_state': 42}   \n",
+       "2                                                                                                                                {'alpha': 7.0, 'force_alpha': False, 'norm': False}   \n",
+       "3                                                                                              {'class_weight': 'balanced', 'criterion': 'gini', 'max_depth': 4, 'random_state': 42}   \n",
+       "4                                                                                                                                                                                 {}   \n",
+       "0  {'activation': 'tanh', 'alpha': 0.1, 'hidden_layer_sizes': (22,), 'learning_rate': 'adaptive', 'learning_rate_init': 0.5, 'max_iter': 2000, 'random_state': 42, 'solver': 'adam'}   \n",
+       "5                                                                                 {'leaf_size': 200, 'metric': 'euclidean', 'outlier_label': 1, 'radius': 0.7, 'weights': 'uniform'}   \n",
+       "6                                                                                                                   {'metric': 'manhattan', 'n_neighbors': 3, 'weights': 'distance'}   \n",
        "\n",
        "   fit_time  \n",
        "0      0.01  \n",
-       "2      0.01  \n",
        "1      0.01  \n",
+       "2      0.01  \n",
+       "3      0.01  \n",
+       "4      0.01  \n",
        "0      0.01  \n",
-       "0      0.01  \n",
-       "0      0.01  \n",
-       "0      0.02  \n",
-       "0      0.02  "
+       "5      0.01  \n",
+       "6      0.02  "
       ]
      },
      "metadata": {},
@@ -846,8 +842,8 @@
      "output_type": "stream",
      "text": [
       "8 samples were saved\n",
-      "CPU times: user 5.41 s, sys: 2.81 s, total: 8.22 s\n",
-      "Wall time: 9.61 s\n"
+      "CPU times: user 20.6 s, sys: 14.4 s, total: 35 s\n",
+      "Wall time: 14min 32s\n"
      ]
     }
    ],
@@ -857,11 +853,8 @@
     "csv_performances_saved = os.path.abspath('exec_results/_best_results_Single_Model.csv')\n",
     "\n",
     "\n",
-    "i = 1\n",
-    "\n",
-    "\n",
     "# verify if already exists an CSV with the results\n",
-    "overwrite_results_saved_previously = True\n",
+    "overwrite_results_saved_previously = False\n",
     "\n",
     "if os.path.exists(csv_performances_saved) and overwrite_results_saved_previously==False:\n",
     "    print('Reading results saved previously...')\n",
@@ -871,17 +864,18 @@
     "\n",
     "\n",
     "testing = True\n",
-    "# testing = False\n",
+    "testing = False\n",
     "\n",
     "grid_configs = [\n",
-    "    utils_exec_models_new.create_models_SVM_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_DT_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_RF_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_NB_Gaussian_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_NB_Complement_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_kNN_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_RadiusNN_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_DT_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_SVM_grid(testing=testing),\n",
+    "    \n",
+    "#     utils_exec_models_new.create_models_RF_grid(testing=testing),\n",
     "    utils_exec_models_new.create_models_NN_grid(qty_features=X_train.shape[1], testing=testing),\n",
-    "    utils_exec_models_new.create_models_GaussianNB_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_ComplementNB_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_kNN_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_RadiusNN_grid(testing=testing),\n",
     "]\n",
     "\n",
     "additionals_info = []\n",
@@ -908,7 +902,7 @@
     "    classifier_name = utils_exec_models_new.get_classifier_class_name(classifier)\n",
     "\n",
     "    #save the best performance for the current classifier\n",
-    "    csv_file = os.path.abspath(f'exec_results/results_{classifier_name}.csv')\n",
+    "    csv_file = os.path.abspath(f'exec_results/top_results_{classifier_name}.csv')\n",
     "    utils.save_to_csv(df=df_performances_detailed, csv_file=csv_file)\n",
     "    \n",
     "    # Store additional_info data (serialize)\n",
